<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".activities.DetailFormActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tvCancel"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:textColor="@color/colorTextCancel"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:src="@drawable/ipay_logo"
            android:layout_centerHorizontal="true"
            android:layout_width="200dp"
            android:layout_height="50dp"/>


    </RelativeLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <lax.lega.rv.com.legalax.common.CustomTextviewHelvicNormal
            android:id="@+id/tvUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="12dp"
            android:layout_weight="2"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <lax.lega.rv.com.legalax.common.CustomEdittextHelvic
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:hint="@string/enter_user_name"
            android:layout_weight="1"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="16sp"
            />

    </LinearLayout>


    <View
        android:background="@color/black"
        android:layout_marginVertical="20dp"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <lax.lega.rv.com.legalax.common.CustomTextviewHelvicNormal
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="12dp"
            android:layout_weight="2"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <lax.lega.rv.com.legalax.common.CustomEdittextHelvic
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:hint="@string/enter_email"
            android:layout_weight="1"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="16sp"
            />


    </LinearLayout>

    <View
        android:background="@color/black"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <TextView
        android:text="Optional"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_gravity="end"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <lax.lega.rv.com.legalax.common.CustomTextviewHelvicNormal
            android:id="@+id/tvMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="12dp"
            android:layout_weight="2"
            android:text="@string/mobile_no"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <lax.lega.rv.com.legalax.common.CustomEdittextHelvic
            android:id="@+id/etMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:hint="@string/enter_mobile_no"
            android:layout_weight="1"
            android:inputType="number"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="16sp"
            />

    </LinearLayout>

    <View
        android:background="@color/black"
        android:layout_marginVertical="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <lax.lega.rv.com.legalax.common.CustomTextviewHelvicNormal
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="12dp"
            android:layout_weight="2"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <lax.lega.rv.com.legalax.common.CustomEdittextHelvic
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:hint="@string/enter_description"
            android:layout_weight="1"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="16sp"
            />


    </LinearLayout>

    <View
        android:background="@color/black"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <TextView
        android:text="Optional"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_gravity="end"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <lax.lega.rv.com.legalax.common.CustomTextviewHelvicNormal
            android:id="@+id/tvRemark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="12dp"
            android:layout_weight="2"
            android:text="@string/remark"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <lax.lega.rv.com.legalax.common.CustomEdittextHelvic
            android:id="@+id/etRemark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:hint="@string/enter_remarks"
            android:layout_weight="1"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="16sp"
            />


    </LinearLayout>

    <View
        android:background="@color/black"
        android:layout_marginVertical="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <Button
        android:id="@+id/btnProceed"
        android:text="@string/proceed"
        android:textColor="@color/white"
        android:layout_marginHorizontal="30dp"
        android:textAllCaps="false"
        android:layout_marginTop="40dp"
        android:paddingVertical="16dp"
        android:background="@drawable/bg_green_corner_12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>