<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:paddingVertical="40dp"
    android:paddingHorizontal="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/tvSelectCategoryD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view1"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/select_category"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:text="@string/all_categories"
        android:textColor="@color/black"
        android:paddingStart="10dp"
        android:gravity="center_vertical"
        android:background="@color/grey_300"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <ImageView
        app:layout_constraintBottom_toBottomOf="@+id/tvSelectCategoryD"
        app:layout_constraintTop_toTopOf="@+id/tvSelectCategoryD"
        app:layout_constraintEnd_toEndOf="@+id/tvSelectCategoryD"
        android:src="@drawable/dropdown_green"
        android:layout_marginEnd="10dp"
        android:tint="@color/black"
        android:padding="4dp"
        android:id="@+id/ivArrowCategory"
        android:layout_width="20dp"
        android:layout_height="20dp"/>


    <TextView
        android:id="@+id/tvSelectDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSelectCategoryD"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/select_date"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:paddingStart="10dp"
        android:text="@string/recent"
        android:gravity="center_vertical"
        android:background="@color/grey_300"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <ImageView
        app:layout_constraintBottom_toBottomOf="@+id/tvSelectDate"
        app:layout_constraintTop_toTopOf="@+id/tvSelectDate"
        app:layout_constraintEnd_toEndOf="@+id/tvSelectDate"
        android:src="@drawable/dropdown_green"
        android:tint="@color/black"
        android:padding="4dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/ivArrow"
        android:layout_width="20dp"
        android:layout_height="20dp"/>


</android.support.constraint.ConstraintLayout>